# MinecraftConsoles

./: CMakeLists.txt  CMakePresets.json  README.md  build_ios.sh  build_macos.sh  build_watcher.sh  task.md
.claude/: settings.local.json
.github/workflows/: nightly-ios.yml  nightly-macos.yml
Minecraft.Client/: AbstractContainerScreen.cpp  CMakeLists.txt  Camera.cpp  ChatScreen.cpp  Chunk.cpp  ClientConnection.cpp  ClockTexture.cpp  CompassTexture.cpp  DeathScreen.cpp  DragonModel.cpp  EntityRenderDispatcher.cpp  EntityTracker.cpp  Extrax64Stubs.cpp  GameRenderer.cpp  Gui.cpp  InventoryScreen.cpp  ItemFrameRenderer.cpp  ItemInHandRenderer.cpp  ItemRenderer.cpp  LevelRenderer.cpp  LocalPlayer.cpp  Minecraft.cpp  Minecraft.h  MinecraftServer.cpp  MobRenderer.cpp  MultiPlayerLocalPlayer.cpp  OffsettedRenderList.cpp  PaintingRenderer.cpp  PendingConnection.cpp  PlayerRenderer.cpp  PreStitchedTextureMap.cpp  ServerConnection.cpp  Tesselator.cpp  Texture.cpp  Textures.cpp  glWrapper.cpp  stdafx.h  stubs.h
Minecraft.Client/Apple/: AppleMaths.h  AppleTypes.h  Apple_App.cpp  Apple_App.h
Minecraft.Client/Apple/4JLibs/inc/: 4J_Input.h  4J_Profile.h  4J_Render.h  4J_Storage.h
Minecraft.Client/Apple/Extras/: AppleMouseStub.cpp  AppleODRDefs.cpp  ShutdownManager.h
Minecraft.Client/Apple/GameConfig/: Minecraft.spa.h
Minecraft.Client/Apple/Iggy/: IggyStubs.mm
Minecraft.Client/Apple/Iggy/gdraw/: gdraw_metal.h  gdraw_metal.mm
Minecraft.Client/Apple/Iggy/include/: gdraw.h  iggy.h  iggyexpruntime.h  iggyperfmon.h  rrCore.h
Minecraft.Client/Apple/Input/: AppleInput.mm  AppleKeyboardMouseInput.h  AppleKeyboardMouseInput.mm  AppleProfile.mm  AppleStorage.mm
Minecraft.Client/Apple/Leaderboards/: AppleLeaderboardManager.h
Minecraft.Client/Apple/Metal/: MetalRenderer.mm  MetalShaders.metal
Minecraft.Client/Apple/Network/: BSDNetLayer.cpp  BSDNetLayer.h
Minecraft.Client/Apple/Sentient/: DynamicConfigurations.h  MinecraftTelemetry.h  SentientManager.h  SentientTelemetryCommon.h
Minecraft.Client/Apple/Social/: SocialManager.h
Minecraft.Client/Apple/UIController/: Apple_UIController.h  Apple_UIController.mm
Minecraft.Client/Apple/XML/: ATGXmlParser.h
Minecraft.Client/AppleMedia/: 4J_strings.h
Minecraft.Client/Common/: Consoles_App.cpp  Consoles_App.h  PostProcesser.h
Minecraft.Client/Common/Audio/: Consoles_SoundEngine.h  SoundEngine.cpp  SoundEngine.h
Minecraft.Client/Common/Leaderboards/: .!389!base64.cpp  SonyLeaderboardManager.cpp
Minecraft.Client/Common/Network/: GameNetworkManager.cpp  PlatformNetworkManagerStub.cpp
Minecraft.Client/Common/Telemetry/: TelemetryManager.cpp
Minecraft.Client/Common/UI/: UI.h  UIControl_TextInput.h  UIController.cpp  UIScene.h  UIScene_AbstractContainerMenu.cpp  UIScene_Credits.h  UIScene_DebugSetCamera.cpp  UIScene_Intro.cpp
Minecraft.Client/Common/XUI/: XUI_MultiGameJoinLoad.cpp
Minecraft.Client/Common/zlib/: gzguts.h
Minecraft.Client/PS3/PS3Extras/: ShutdownManager.h
Minecraft.Client/cmake/sources/: Apple.cmake
Minecraft.Client/iOS/: Info.plist  LaunchScreen.storyboard  TouchInput.h  TouchInput.mm  iOS_Minecraft.mm
Minecraft.Client/macOS/: Info.plist  macOS_Minecraft.mm
Minecraft.World/: AppleLevelHelper.cpp  BasicTypeContainers.cpp  BasicTypeContainers.h  C4JThread.cpp  C4JThread.h  CMakeLists.txt  Connection.cpp  DirectoryLevelStorage.cpp  FileHeader.h  Hasher.cpp  LevelData.cpp  Minecraft.World.cpp  Socket.cpp  stdafx.h
Minecraft.World/x64headers/: extraX64.h
cmake/: CopyFolderScript.cmake
include/lce_filesystem/: lce_filesystem.cpp
